:memo: instructions to run reference impl